   Generously contributed by Peter Kovesi.

NEW FUNCTIONS

   o Mathematical operations are now supported for images.
   For example:   inc <- atan(bei.extra$grad) * 180/pi
   See help(Math.im)

   o interp.colours
   Interpolate a sequence of colour values.

   o anyDuplicated.ppp, anyDuplicated.ppx
   Fast replacements for any(duplicated(x)) for point patterns.

SIGNIFICANT USER-VISIBLE CHANGES

   o vignettes
   New vignette 'datasets' summarises all the datasets installed
   with the spatstat package.

   o relrisk
   New argument 'relative' specifies whether to calculate the relative risk
   or the absolute probability of each type of point.

   o plot.im
   The default colour map for plotting images,
   specified by spatstat.options('image.colfun'), 
   has been changed to a perceptually uniform map.

   o runifpoint, rpoispp, rStrauss, rHardcore, rStraussHard,
   rDiggleGratton, rDGS, runifdisc, rpoint, rMaternI, rMaternII, rSSI,
   rPoissonCluster, rGaussPoisson, rstrat, rsyst, rcell, rthin, rjitter,
   rNeymanScott, rMatClust, rThomas, rCauchy, rVarGamma, rmpoint, rmpoispp, 
   runifpointOnLines, rpoisppOnLines, runiflpp, rpoislpp, runifpointx, 
   rpoisppx, runifpoint3, rpoispp3
      These random point pattern generators now have an argument 'nsim'
      specifying the number of simulated realisations to be generated.

   o pairorient
   Labels and descriptions of columns have been corrected.

   o ppp
   Accelerated.

   o Gcom, Gres
   When conditional=TRUE and restrict=TRUE, the Hanisch estimate
   was not calculated exactly as described in Appendix E.1 of 
   Baddeley, Rubak and Moller (2011). The intensity was estimated 
   on the full window rather than the eroded window.
   Fixed.   

   o predict.ppm
   For multitype models, when the result is a list of images,
   the names of list entries are now identical to the mark levels
   (e.g. "hickory" instead of "markhickory")

   o print.slrm
   Output now respects options('width')

   o plot.im