@@ -1,7 +1,7 @@
 Package: spatstat
 Version: 1.39-2
 Nickname: Do The Maths
-Date: 2014-11-19
+Date: 2014-11-20
 Title: Spatial Point Pattern analysis, model-fitting, simulation, tests
 Author: Adrian Baddeley <Adrian.Baddeley@uwa.edu.au>,
 	Rolf Turner <r.turner@auckland.ac.nz> 
