@@ -1452,6 +1452,7 @@ export("plot.splitppp")
 export("plot.symbolmap")
 export("plot.tess")
 export("plot.texturemap")
+export("plot.yardstick")
 export("pmixpois")
 export("pointgrid")
 export("pointsOnLines")
@@ -1588,6 +1589,7 @@ export("print.tess")
 export("print.texturemap")
 export("print.timed")
 export("print.units")
+export("print.yardstick")
 export("profilepl")
 export("progressreport")
 export("project2segment")
@@ -1873,6 +1875,7 @@ export("shift.quadrattest")
 export("shift.tess") 
 export("shiftxy")              
 export("shiftxypolygon")              
+export("shift.yardstick")              
 export("short.deparse")
 export("shortside")
 export("shortside.box3")
@@ -2162,6 +2165,8 @@ export("xtfrm.im")
 export("xy.grid")
 export("xypolygon2psp")
 export("xypolyselfint")
+export("[.yardstick")
+export("yardstick")
 export("y.quad")
 export("zapsmall.im")
 
@@ -2657,6 +2662,7 @@ S3method("plot", "spatialcdf")
 S3method("plot", "symbolmap")
   S3method("plot", "tess")
  S3method("plot", "texturemap")
+ S3method("plot", "yardstick")
 S3method("pool", "envelope")
 S3method("pool", "fasp")
 S3method("pool", "quadrattest")
@@ -2765,6 +2771,7 @@ S3method("print", "tess")
 S3method("print", "texturemap")
 S3method("print", "timed")
   S3method("print", "units")
+S3method("print", "yardstick")
   S3method("[", "psp")
   S3method("[", "quad")
   S3method("quadratcount", "ppp")
@@ -2855,6 +2862,7 @@ S3method("shift", "msr")
 S3method("shift", "quadratcount")
 S3method("shift", "quadrattest")
   S3method("shift", "tess")
+S3method("shift", "yardstick")
 S3method("shortside", "box3")
 S3method("shortside", "boxx")
  S3method("shortside", "owin")
@@ -2982,6 +2990,7 @@ S3method("with", "fv")
 S3method("with", "hyperframe")
 S3method("with", "msr")
 S3method("xtfrm", "im")
+S3method("[", "yardstick")
 # ......................................... 
 #      Assignment methods                   
 # ......................................... 
